# vox

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD-PARTY-NOTICES.md  ai-review.json  claude.json  justfile  snapshot.md  sonar-project.properties  vcpkg.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/install-scream/: action.yml
.github/actions/install-vbcable/: action.yml
.github/actions/test-matrix/: action.yml  (+3 more)
.github/cla/: signatures.json
.github/instructions/: *.instructions.md  review.instructions.md
.github/workflows/: back-merge.yml  ci.yml  cla.yml  copilot-approval-gate.yml  cost-collector.yml  cost-contribution.yml  effort.yml  issue-lifecycle.yml  release.yml  sonar.yml
assets/: README.md
benchmarks/: CMakeLists.txt  announce_fixture.hpp  main.cpp  percentile_report.hpp  resampler_benchmark.cpp  timing_sink.hpp  ttfa_pipeline_benchmark.cpp  ttfa_sapi_benchmark.cpp
cmake/: CompilerWarnings.cmake  ProjectStandard.cmake  Sanitizers.cmake  StaticAnalysis.cmake  VoxHelpers.cmake
data/lexicon/: de.lex  en.lex
doc/: CMakeLists.txt  Doxyfile.in  cost-ledger.md
doc/architecture/: architecture.md
doc/cost-data/: ai-review.json
doc/requirements/: README.md  REQ-001-focus-change-single-german-utterance.md  REQ-002-keyboard-only-operation.md  REQ-003-instant-barge-in.md  REQ-004-robust-focus-subscription.md  REQ-005-announcement-vocabulary-is-data.md  REQ-006-lexicon-replaces-default-wholesale.md  REQ-007-graceful-lexicon-fallback.md  REQ-008-name-and-value-normalization.md  REQ-009-german-number-to-words.md  REQ-010-german-first-voice-never-silent.md  REQ-011-voice-discovery-classic-and-onecore.md  REQ-012-language-couples-voice-and-lexicon.md  REQ-013-per-part-language-overrides.md  REQ-014-language-divergence-reported.md  REQ-015-tts-engine-cancellable-pcm.md  REQ-016-speech-rate-control.md  REQ-017-windowed-sinc-resampling.md  REQ-018-ttfa-uncached-budget.md  REQ-019-cached-and-continuous-latency.md  REQ-020-dogfooding-acceptance.md
doc/todo/: 0001-project-setup.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  vox.rc.in
src/app/include/vox/app/: app.hpp  default_app.hpp  lexicon_loader.hpp  reader.hpp
src/app/src/: app.cpp  default_app.cpp  lexicon_loader.cpp  main.cpp  reader.cpp
src/audio/: CMakeLists.txt
src/audio/include/vox/audio/: audio_format.hpp  errors.hpp  iaudio_sink.hpp  pcm_buffer.hpp  pcm_converter.hpp  pcm_ring.hpp  wasapi_audio_sink.hpp  wasapi_test_seam.hpp
src/audio/include/vox/audio/detail/: ring_push.hpp
src/audio/src/: audio_format.cpp  pcm_converter.cpp  pcm_ring.cpp  wasapi_audio_sink.cpp
src/core/: CMakeLists.txt
src/core/include/vox/core/: os_error.hpp  version.hpp.in
src/core/src/: os_error.cpp  version.cpp
src/german/: CMakeLists.txt  de_lex_data.hpp.in
src/german/include/vox/german/: lexicon.hpp  normalize.hpp  numbers.hpp
src/german/src/: lexicon.cpp  normalize.cpp  numbers.cpp
src/input/: CMakeLists.txt
src/input/include/vox/input/: command.hpp  command_handler.hpp  command_map.hpp  errors.hpp  iinput_hook.hpp  key_event.hpp  keyboard_hook.hpp  keyboard_test_seam.hpp
src/input/src/: command_map.cpp  keyboard_hook.cpp
src/model/: CMakeLists.txt
src/model/include/vox/model/: accessible_node.hpp  role.hpp  state.hpp
src/model/src/: role.cpp  state.cpp
src/output/: CMakeLists.txt
src/output/include/vox/output/: output_manager.hpp  utterance.hpp
src/output/src/: output_manager.cpp
src/provider/: CMakeLists.txt
src/provider/include/vox/provider/: iprovider.hpp  mapper.hpp  uia_element_data.hpp  uia_ids.hpp  uia_provider.hpp  uia_test_seam.hpp
src/provider/src/: mapper.cpp  uia_provider.cpp
src/tts/: CMakeLists.txt
src/tts/include/vox/tts/: errors.hpp  itts_engine.hpp  rate.hpp  sapi_test_seam.hpp  sapi_tts_engine.hpp  voice_selection.hpp
src/tts/include/vox/tts/detail/: sapi_internal.hpp
src/tts/src/: rate.cpp  sapi_tts_engine.cpp  voice_selection.cpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  app_test.cpp  default_app_test.cpp  lexicon_loader_test.cpp  reader_test.cpp
tests/audio/: CMakeLists.txt  audio_format_test.cpp  fake_audio_sink_test.cpp  pcm_buffer_test.cpp  pcm_converter_test.cpp  pcm_ring_test.cpp  ring_push_test.cpp  wasapi_audio_sink_itest.cpp  wasapi_audio_sink_test.cpp  wasapi_com_mocks.hpp
tests/core/: CMakeLists.txt  os_error_test.cpp  version_test.cpp
tests/german/: CMakeLists.txt  lexicon_test.cpp  normalize_test.cpp  numbers_test.cpp
tests/input/: CMakeLists.txt  command_map_test.cpp  keyboard_hook_itest.cpp  keyboard_hook_test.cpp
tests/model/: CMakeLists.txt  accessible_node_test.cpp  role_test.cpp  state_test.cpp
tests/output/: CMakeLists.txt  output_manager_test.cpp
tests/provider/: CMakeLists.txt  fake_provider_test.cpp  mapper_test.cpp  uia_com_mocks.hpp  uia_provider_itest.cpp  uia_provider_test.cpp
tests/support/: CMakeLists.txt
tests/support/include/vox/testing/: fake_audio_sink.hpp  fake_command_handler.hpp  fake_provider.hpp  fake_tts_engine.hpp
tests/support/uia_test_app/: CMakeLists.txt  control_tree.hpp  main.cpp
tests/tools/: .coveragerc  conftest.py  requirements.in  requirements.txt  script_loader.py  test_ccusage_hook_parser.py  test_check_license_headers.py  test_cost_collector.py  test_run_clang_format.py
tests/tts/: CMakeLists.txt  fake_tts_engine_test.cpp  rate_test.cpp  sapi_com_mocks.hpp  sapi_internal_test.cpp  sapi_tts_engine_itest.cpp  sapi_tts_engine_test.cpp  voice_selection_test.cpp
tools/: bench-summary.jq  bench-to-action.jq  changelog-section.sh  check-license-headers.py  cost_collector.py  prepare-release.sh  run-clang-format.py  win-check.ps1  win-tidy.ps1
tools/hooks/: pre-push
ttfa/: data.js
(+16 files in other folders)
